# internal/routers/user_router.go
@@ -1,0 +1,65 @@
+// Code generated by https://github.com/go-dev-frame/sponge
+
+package routers
+
+import (
+	"github.com/gin-gonic/gin"
+
+	"github.com/go-dev-frame/sponge/pkg/logger"
+	//"github.com/go-dev-frame/sponge/pkg/middleware"
+
+	schoolV1 "school/api/school/v1"
+	"school/internal/handler"
+)
+
+func init() {
+	allMiddlewareFns = append(allMiddlewareFns, func(c *middlewareConfig) {
+		userMiddlewares(c)
+	})
+
+	allRouteFns = append(allRouteFns,
+		func(r *gin.Engine, groupPathMiddlewares map[string][]gin.HandlerFunc, singlePathMiddlewares map[string][]gin.HandlerFunc) {
+			userRouter(r, groupPathMiddlewares, singlePathMiddlewares, handler.NewUserHandler())
+		})
+}
+
+func userRouter(
+	r *gin.Engine,
+	groupPathMiddlewares map[string][]gin.HandlerFunc,
+	singlePathMiddlewares map[string][]gin.HandlerFunc,
+	iService schoolV1.UserLogicer) {
+	schoolV1.RegisterUserRouter(
+		r,
+		groupPathMiddlewares,
+		singlePathMiddlewares,
+		iService,
+		schoolV1.WithUserLogger(logger.Get()),
+		schoolV1.WithUserHTTPResponse(),
+		schoolV1.WithUserErrorToHTTPCode(
+		// Set some error codes to standard http return codes,
+		// by default there is already ecode.InternalServerError and ecode.ServiceUnavailable
+		// example:
+		// 	ecode.Forbidden, ecode.LimitExceed,
+		),
+	)
+}
+
+// you can set the middleware of a route group, or set the middleware of a single route,
+// or you can mix them, pay attention to the duplication of middleware when mixing them,
+// it is recommended to set the middleware of a single route in preference
+func userMiddlewares(c *middlewareConfig) {
+	// set up group route middleware, group path is left prefix rules,
+	// if the left prefix is hit, the middleware will take effect, e.g. group route is /api/v1, route /api/v1/user/:id  will take effect
+	// c.setGroupPath("/api/v1/user", middleware.Auth())
+
+	// set up single route middleware, just uncomment the code and fill in the middlewares, nothing else needs to be changed
+	//c.setSinglePath("POST", "/api/v1/user", middleware.Auth())    // Create user
+	//c.setSinglePath("DELETE", "/api/v1/user/:id", middleware.Auth())    // DeleteByID delete user by id
+	//c.setSinglePath("PUT", "/api/v1/user/:id", middleware.Auth())    // UpdateByID update user by id
+	//c.setSinglePath("GET", "/api/v1/user/:id", middleware.Auth())    // GetByID get user by id
+	//c.setSinglePath("POST", "/api/v1/user/list", middleware.Auth())    // List of user by query parameters
+	//c.setSinglePath("POST", "/api/v1/user/delete/ids", middleware.Auth())    // DeleteByIDs delete user by batch id
+	//c.setSinglePath("POST", "/api/v1/user/condition", middleware.Auth())    // GetByCondition get user by condition
+	//c.setSinglePath("POST", "/api/v1/user/list/ids", middleware.Auth())    // ListByIDs list of user by batch id
+	//c.setSinglePath("GET", "/api/v1/user/list", middleware.Auth())    // ListByLastID list user by last id
+}
